# auto-clicker

./: .pre-commit-config.yaml  README.md  clicker.py  main.py  pyproject.toml  requirements.txt  test_app.py  todo
app/core/: application.py  element.py  layouts.py
app/core/layouts/: baselayout.py  infolayout.py  mainlayout.py  settingslayout.py
app/utils/: env.py
deploy/: .env-copy
tests/: test_main.py
