[tool.poetry]
name = "auto-clicker"
version = "0.1.0"
description = "Simple python auto-clicker"
authors = ["Yellco <dazheltyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
PySimpleGUI = "^4.59.0"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
