[tool.poetry]
name = "auto-clicker"
version = "0.1.3"
description = "Simple python auto-clicker"
authors = ["Yellco <dazheltyy@gmail.com>"]
packages = [
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
PySimpleGUI = "^4.59.0"
PyAutoGUI = "^0.9.53"
pytest-cov = "^3.0.0"
mouse = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = 'main:main'
